Migration application generated with JHipster bundled (target)