@@ -1,29 +1,19 @@
 package org.jhipster.health.repository.search;
 
-import static org.elasticsearch.index.query.QueryBuilders.queryStringQuery;
-
+import co.elastic.clients.elasticsearch._types.query_dsl.QueryStringQuery;
 import java.util.List;
-import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-import org.elasticsearch.search.sort.SortBuilder;
 import org.jhipster.health.domain.BloodPressure;
 import org.jhipster.health.repository.BloodPressureRepository;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.elasticsearch.core.ElasticsearchRestTemplate;
+import org.springframework.data.elasticsearch.client.elc.ElasticsearchTemplate;
+import org.springframework.data.elasticsearch.client.elc.NativeQuery;
 import org.springframework.data.elasticsearch.core.SearchHit;
 import org.springframework.data.elasticsearch.core.SearchHits;
-import org.springframework.data.elasticsearch.core.query.NativeSearchQuery;
-import org.springframework.data.elasticsearch.core.query.NativeSearchQueryBuilder;
 import org.springframework.data.elasticsearch.core.query.Query;
 import org.springframework.data.elasticsearch.repository.ElasticsearchRepository;
 import org.springframework.scheduling.annotation.Async;
-import org.springframework.transaction.annotation.Isolation;
-import org.springframework.transaction.annotation.Propagation;
-import org.springframework.transaction.annotation.Transactional;
 
 /**
  * Spring Data Elasticsearch repository for the {@link BloodPressure} entity.
@@ -36,34 +26,43 @@ interface BloodPressureSearchRepositoryInternal {
 
     Page<BloodPressure> search(Query query);
 
+    @Async
     void index(BloodPressure entity);
+
+    @Async
+    void deleteFromIndexById(Long id);
 }
 
 class BloodPressureSearchRepositoryInternalImpl implements BloodPressureSearchRepositoryInternal {
 
-    private final ElasticsearchRestTemplate elasticsearchTemplate;
+    private final ElasticsearchTemplate elasticsearchTemplate;
     private final BloodPressureRepository repository;
 
-    BloodPressureSearchRepositoryInternalImpl(ElasticsearchRestTemplate elasticsearchTemplate, BloodPressureRepository repository) {
+    BloodPressureSearchRepositoryInternalImpl(ElasticsearchTemplate elasticsearchTemplate, BloodPressureRepository repository) {
         this.elasticsearchTemplate = elasticsearchTemplate;
         this.repository = repository;
     }
 
     @Override
     public Page<BloodPressure> search(String query, Pageable pageable) {
-        NativeSearchQuery nativeSearchQuery = new NativeSearchQuery(queryStringQuery(query));
-        return search(nativeSearchQuery.setPageable(pageable));
+        NativeQuery nativeQuery = new NativeQuery(QueryStringQuery.of(qs -> qs.query(query))._toQuery());
+        return search(nativeQuery.setPageable(pageable));
     }
 
     @Override
     public Page<BloodPressure> search(Query query) {
         SearchHits<BloodPressure> searchHits = elasticsearchTemplate.search(query, BloodPressure.class);
-        List<BloodPressure> hits = searchHits.map(SearchHit::getContent).stream().collect(Collectors.toList());
+        List<BloodPressure> hits = searchHits.map(SearchHit::getContent).stream().toList();
         return new PageImpl<>(hits, query.getPageable(), searchHits.getTotalHits());
     }
 
     @Override
     public void index(BloodPressure entity) {
         repository.findOneWithEagerRelationships(entity.getId()).ifPresent(elasticsearchTemplate::save);
+    }
+
+    @Override
+    public void deleteFromIndexById(Long id) {
+        elasticsearchTemplate.delete(String.valueOf(id), BloodPressure.class);
     }
 }
